--- a/src/View/signin.phtml
+++ b/src/View/signin.phtml
@@ -17,6 +17,7 @@
                         <input type="password" class="form-control" id="pswd" name="pswd" minlength="4" placeholder="Password" required>
                         <label for="pswd">Password:</label>
                     </div>
+                    <div class="alert-container mb-3"></div>
                     <div class="mb-3">
                         <button class="btn btn-primary w-100" name="submit">Sign In</button>
                     </div>
