--- a/src/View/signup.phtml
+++ b/src/View/signup.phtml
@@ -25,6 +25,7 @@
                         <input type="password" class="form-control" id="pswd_repeat" name="pswd_repeat" placeholder="Password repeat" required>
                         <label class="form-label" for="pswd_repeat">Password repeat:</label>
                     </div>
+                    <div class="alert-container mb-3"></div>
                     <div class="mb-3">
                         <button class="btn btn-primary w-100" name="submit">Sign Up</button>
                     </div>
