--- a/src/View/settings.phtml
+++ b/src/View/settings.phtml
@@ -44,8 +44,8 @@
     </main>
 </div>
 <!-- Change user email modal -->
-<div class="modal fade" id="changeEmailModal" tabindex="-1" aria-labelledby="changeEmailModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+<div class="modal" id="changeEmailModal" tabindex="-1" aria-labelledby="changeEmailModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header border-0">
                 <h1 class="modal-title fs-5" id="changeEmailModalLabel">Change your email address</h1>
@@ -57,6 +57,7 @@
                         <label for="email" class="form-label">Enter your new email address:</label>
                         <input type="email" class="form-control" id="email" name="email" required>
                     </div>
+                    <div class="alert-container"></div>
                 </form>
             </div>
             <div class="modal-footer border-0">
@@ -67,8 +68,8 @@
     </div>
 </div>
 <!-- Change user password modal -->
-<div class="modal fade" id="changePasswordModal" tabindex="-1" aria-labelledby="changePasswordModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+<div class="modal" id="changePasswordModal" tabindex="-1" aria-labelledby="changePasswordModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header border-0">
                 <h1 class="modal-title fs-5" id="changePasswordModalLabel">Change your account password</h1>
@@ -84,6 +85,7 @@
                         <label for="password_repeat" class="form-label">Repeat password:</label>
                         <input type="password" class="form-control" id="password_repeat" name="pswd_repeat" required>
                     </div>
+                    <div class="alert-container"></div>
                 </form>
             </div>
             <div class="modal-footer border-0">
@@ -94,8 +96,8 @@
     </div>
 </div>
 <!-- Delete account modal -->
-<div class="modal fade" id="deleteAccountModal" tabindex="-1" aria-labelledby="deleteAccountModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+<div class="modal" id="deleteAccountModal" tabindex="-1" aria-labelledby="deleteAccountModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header border-0">
                 <h1 class="modal-title fs-5" id="deleteAccountModalLabel">Delete this account</h1>
@@ -108,6 +110,7 @@
                         <label for="pswd_confirmation" class="form-label">Confirm your decision by entering your password:</label>
                         <input type="password" class="form-control" id="pswd_confirmation" name="pswd_confirmation" required>
                     </div>
+                    <div class="alert-container"></div>
                 </form>
             </div>
             <div class="modal-footer border-0">
