--- a/src/View/password_reset/success.phtml
+++ b/src/View/password_reset/success.phtml
@@ -4,7 +4,7 @@
         <div class="card form-card bg-body-tertiary">
             <div class="card-body">
                 <div class="col-12 mb-4 text-center">
-                    <h3 class="mb-4">Password has been changed!</h3>
+                    <h3 class="mb-4 text-success">Password has been changed!</h3>
                     Now you can go back to the login page and sign in with your new password.
                 </div>
                 <div class="col-12">
