--- a/src/View/bookmarks/dashboard.phtml
+++ b/src/View/bookmarks/dashboard.phtml
@@ -1,13 +1,17 @@
 <?php include_once PAGE_HEADER; ?>
 <?php include_once PAGE_NAVBAR; ?>
 <div class="container-xl">
-    <button class="add-button position-fixed bg-success rounded-circle border-0 shadow" data-bs-toggle="modal" data-bs-target="#addModal">
-        <svg class="icon icon-tabler" width="24" height="24" viewBox="0 0 24 24">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-            <path d="M12 5l0 14" />
-            <path d="M5 12l14 0" />
-        </svg>
-    </button>
+    <div class="position-fixed bottom-0 end-0 m-4 d-flex flex-column gap-3">
+        <span data-bs-toggle="tooltip" data-bs-placement="left" data-bs-title="Add bookmark">
+            <button class="dashboard-action-button bg-success rounded-circle border-0 shadow" data-bs-toggle="modal" data-bs-target="#addModal">
+                <svg class="icon icon-tabler" width="24" height="24" viewBox="0 0 24 24">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M12 5l0 14" />
+                    <path d="M5 12l14 0" />
+                </svg>
+            </button>
+        </span>
+    </div>
     <main class="my-5">
         <div class="d-flex flex-row align-items-center">
             <h3 class="m-0">My dashboard</h3>
@@ -22,69 +26,30 @@
                 </svg>
             </button>
             <div class="form-check form-switch" style="margin-left: auto; height: min-content;">
-                <input <?= ($is_public) ? 'checked' : '' ?> class="form-check-input" type="checkbox" role="switch" id="bookmarksPrivacySwitch">
+                <input <?= $isPublic ? 'checked' : '' ?> class="form-check-input" type="checkbox" role="switch" id="bookmarksPrivacySwitch">
                 <label class="form-check-label" for="bookmarksPrivacySwitch">Public</label>
             </div>
         </div>
-        <?php if (count($data) === 0): ?>
+        <?php if (count($bookmarks) === 0): ?>
             <div class="text-center my-5 py-5">
                 <h1 class="text-secondary">You don't have any bookmarks yet</h1>
                 <h5 class="text-secondary">Click on the green rounded button at the bottom of the screen to add your first bookmark.</h5>
             </div>
         <?php endif; ?>
-        <?php foreach ($data as $r): ?>
-            <div class="bookmark-card mx-auto my-4 bg-primary bg-gradient text-white">
-                <div class="bookmark-card-body d-flex flex-row">
-                    <a target="_blank" class="bookmark-link w-100" title="<?= $r['url'] ?>" href="<?= (parse_url($r['url'], PHP_URL_SCHEME) === null) ? '//' . $r['url'] : $r['url'] ?>">
-                        <?= $r['title'] ?>
-                    </a>
-                    <div class="dropdown">
-                        <button class="bookmark-dropdown-button border-0 bg-transparent" id="bookmarkMenu" data-bs-toggle="dropdown" aria-expanded="false">
-                            <svg class="icon icon-tabler" width="24" height="24" viewBox="0 0 24 24">
-                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                                <path d="M5 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                                <path d="M19 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                            </svg>
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="bookmarkMenu">
-                            <li>
-                                <button class="dropdown-item" bookmark-copyurl="<?= $r['url'] ?>">
-                                    <svg class="icon icon-tabler" width="24" height="24" viewBox="0 0 24 24">
-                                        <path d="M7 7m0 2.667a2.667 2.667 0 0 1 2.667 -2.667h8.666a2.667 2.667 0 0 1 2.667 2.667v8.666a2.667 2.667 0 0 1 -2.667 2.667h-8.666a2.667 2.667 0 0 1 -2.667 -2.667z" />
-                                        <path d="M4.012 16.737a2.005 2.005 0 0 1 -1.012 -1.737v-10c0 -1.1 .9 -2 2 -2h10c.75 0 1.158 .385 1.5 1" />
-                                    </svg>
-                                    Copy link
-                                </button>
-                            </li>
-                            <li>
-                                <button class="dropdown-item" data-bs-toggle="modal" data-bs-target="#editBookmarkModal" data-id="<?= $r['id'] ?>">
-                                    <svg class="icon icon-tabler" width="24" height="24" viewBox="0 0 24 24">
-                                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                                        <path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1" />
-                                        <path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z" />
-                                        <path d="M16 5l3 3" />
-                                    </svg>
-                                    Edit
-                                </button>
-                            </li>
-                            <li>
-                                <button class="dropdown-item text-danger" data-bs-toggle="modal" data-bs-target="#deleteBookmarkModal" data-id="<?= $r['id'] ?>">
-                                    <svg class="icon icon-tabler" width="24" height="24" viewBox="0 0 24 24">
-                                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                                        <path d="M4 7h16" />
-                                        <path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12" />
-                                        <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3" />
-                                        <path d="M10 12l4 4m0 -4l-4 4" />
-                                    </svg>
-                                    Delete
-                                </button>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+        <div class="col bookmarks">
+            <?php
+            foreach ($bookmarks as $bookmark)
+                include ROOT_DIR . '/src/View/inc/bookmark.phtml';
+            ?>
+        </div>
+        <?php if ($userHasMoreBookmarks): ?>
+            <div class="col d-flex justify-content-center align-items-center mb-3">
+                <button class="btn btn-lg btn-primary" data-id="<?= $userId ?>" id="infiniteScrollButton">
+                    <span class="spinner-border spinner-border-sm d-none"></span>
+                    <span role="status">Load more bookmarks</span>
+                </button>
             </div>
-        <?php endforeach; ?>
+        <?php endif; ?>
     </main>
 </div>
 
@@ -100,11 +65,11 @@
                 <form method="POST" action="/dashboard/add" id="addBookmarkForm" class="d-flex flex-column gap-3 form-modal">
                     <div class="form-group">
                         <label for="bookmark_label" class="form-label">Label:</label>
-                        <input type="text" class="form-control" id="bookmark_label" name="label" required>
+                        <input type="text" class="form-control" id="bookmark_label" name="label" maxlength="<?= $maxLabelLength ?>" required>
                     </div>
                     <div class="form-group">
                         <label for="bookmark_url" class="form-label">Url:</label>
-                        <input type="text" class="form-control" id="bookmark_url" name="url" required>
+                        <input type="text" class="form-control" id="bookmark_url" name="url" maxlength="<?= $maxUrlLength ?>" required>
                     </div>
                     <div class="alert-container"></div>
                 </form>
@@ -125,19 +90,24 @@
                 <h1 class="modal-title fs-5" id="editBookmarkModalLabel">Edit bookmark</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body position-relative">
                 <form method="POST" action="/dashboard/edit" id="editBookmarkForm" class="d-flex flex-column form-modal">
                     <div class="form-group mb-4">
-                        <label for="bookmark_edit_title" class="form-label">Title:</label>
-                        <input type="text" class="form-control" id="bookmark_edit_title" name="title" required>
+                        <label for="bookmark_edit_label" class="form-label">Label:</label>
+                        <input type="text" class="form-control" id="bookmark_edit_label" name="label" maxlength="<?= $maxLabelLength ?>" required>
                     </div>
                     <div class="form-group mb-4">
                         <label for="bookmark_edit_url" class="form-label">Url:</label>
-                        <input type="text" class="form-control" id="bookmark_edit_url" name="url" required>
+                        <input type="text" class="form-control" id="bookmark_edit_url" name="url" maxlength="<?= $maxUrlLength ?>" required>
                     </div>
                     <input type="hidden" name="bookmark_id" value="">
                     <div class="alert-container"></div>
                 </form>
+                <div class="edit-form-loading-overlay w-100 h-100 position-absolute top-0 start-0 d-flex justify-content-center align-items-center" style="background-color: var(--bs-modal-bg)">
+                    <div class="spinner-border" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                </div>
             </div>
             <div class="modal-footer border-0">
                 <button type="button" class="btn" data-bs-dismiss="modal">Close</button>
@@ -180,7 +150,7 @@
             </div>
             <div class="modal-body">
                 <div class="input-group">
-                    <input type="text" class="form-control" id="bookmarksShareLink" value="<?= BASE_URL . '/b?u=' . $_SESSION['username'] ?>" disabled readonly>
+                    <input type="text" class="form-control" id="bookmarksShareLink" value="<?= BASE_URL . '/shared?u=' . $_SESSION['username'] ?>" disabled readonly>
                     <button class="input-group-text" id="copyBookmarksShareLink">
                         <svg class="icon icon-tabler" width="24" height="24" viewBox="0 0 24 24">
                             <path d="M7 7m0 2.667a2.667 2.667 0 0 1 2.667 -2.667h8.666a2.667 2.667 0 0 1 2.667 2.667v8.666a2.667 2.667 0 0 1 -2.667 2.667h-8.666a2.667 2.667 0 0 1 -2.667 -2.667z" />
