--- a/src/View/home/index.phtml
+++ b/src/View/home/index.phtml
@@ -7,7 +7,7 @@
             <?php if (isset($_SESSION['user_id'])): ?>
                 <a href="/dashboard" class="btn btn-lg btn-primary">Go to dashboard</a>
             <?php else: ?>
-                <a href="/signup" class="btn btn-lg btn-primary">Sign up now!</a>
+                <a href="/signin" class="btn btn-lg btn-primary">Sign in now!</a>
             <?php endif; ?>
         </p>
     </div>
