--- a/src/View/inc/navbar.phtml
+++ b/src/View/inc/navbar.phtml
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg sticky-top bg-body-secondary">
     <div class="container-xl">
-        <a class="navbar-brand" href="<?= ($_SESSION['user_id'] ?? false) ? '/dashboard' : '/' ?>">
+        <a class="navbar-brand" href="/">
             <img src="/images/logo.svg" height="24">
         </a>
         <?php if ($_SESSION['user_id'] ?? false): ?>
