--- a/src/View/signin/index.phtml
+++ b/src/View/signin/index.phtml
@@ -23,7 +23,7 @@
                     </div>
                     <?php if ($session_message !== null): ?>
                         <div class="col-12 mb-4">
-                            <div class="alert alert-danger" role="alert"><?= $session_message ?></div>
+                            <div class="alert alert-danger mb-0" role="alert"><?= $session_message ?></div>
                         </div>
                     <?php endif; ?>
                     <div class="col-12 mb-4">
