--- a/src/View/email/change_email/txt.phtml
+++ b/src/View/email/change_email/txt.phtml
@@ -1,7 +1,9 @@
-Bookmarks
-
 Open the link below to change email of your account to <?= $newEmail ?>. The link is valid for <?= $timeValid ?>.
 
 <?= $verificationLink ?>
 
-If you have not made this change, please ignore this message
+
+If you did not make this change, please ignore this message.
+
+--------------------------------------------------
+This is an automatically generated email - please do not reply to it.
