--- a/src/View/signin/index.phtml
+++ b/src/View/signin/index.phtml
@@ -32,7 +32,7 @@
                 </form>
                 <div class="col-12 mb-4">
                     <span class="d-flex flex-column align-items-center">
-                        <a href="/password_reset">Forgot my password</a>
+                        <a onclick="demoAlert()" class="text-decoration-underline">Forgot my password</a>
                     </span>
                 </div>
                 <div class="col-12">
